commits wrap correctly

--- a/public/bootstrap/less/trp3Chat.less
+++ b/public/bootstrap/less/trp3Chat.less
@@ -48,6 +48,7 @@ img.emoji {
   padding: 0 4px;
   font-size: 13px;
   color: black;
+  white-space: nowrap;
 }
 
 .gtrActivityItemText .commit {
